--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,11 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="LG Dryer Repair Experts | +1 (323) 990-7550">
+<Layout title="Kenmore  Repair Experts | +1 (323) 990-7550">
     <div style="max-width:680px; max-height:680px; margin:0 auto 0 auto;">
         <img class="responsiveimg"  
         alt="Professional LG Dryer Repair Services"
-        src="images/lg-dryer-repair-services.webp" width="600" height="600">
+        src="images/.webp" width="600" height="600">
     </div>
     <div class="maintext">
         <ul>
@@ -75,7 +75,7 @@ import Layout from '../layouts/Layout.astro';
                 height="79"></a></h2>
         <div style="max-width:500px; max-height:500px; margin:0 auto 0 auto; padding:20px;">
             <img loading="lazy"  class="responsiveimg"  alt="Professional LG Dryer Repair Services"
-            src="images/lg-dryer-repair-experts.webp" width="500"  height="500"></div>
+            src="images/.webp" width="500"  height="500"></div>
             <p>Is your Kenmore refrigerator giving you trouble? Don't let a malfunctioning fridge disrupt your kitchen routine. Our expert technicians specialize in Kenmore fridge repair services, providing prompt and reliable solutions to get your appliance back to optimal performance.</p>
             <ul>
                 <li>**Experienced Technicians:** Our team comprises skilled technicians with extensive experience in repairing Kenmore refrigerators.</li>
@@ -124,7 +124,7 @@ import Layout from '../layouts/Layout.astro';
  height="79"></a></h2>
         <div style="max-width:500px; max-height:500px; margin:0 auto 0 auto; padding:20px;">
             <img loading="lazy"  class="responsiveimg"  alt="Professional LG Dryer Repair Services"
-        src="images/lg-dryer-installation-services.webp"  width="500"  height="500"></div>                                                                                
+        src="images/.webp"  width="500"  height="500"></div>                                                                                
         <p>Preserve the longevity and efficiency of your Kenmore refrigerator with our comprehensive maintenance services. Regular maintenance is the key to preventing potential issues, ensuring optimal performance, and extending the life of your appliance. Trust our skilled technicians to provide expert care for your Kenmore fridge.</p>
 
         <h2>Why Choose Our Kenmore Fridge Maintenance Services?</h2>
