--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="Kenmore  Repair Experts | +1 (323) 990-7550">
     <div style="max-width:680px; max-height:680px; margin:0 auto 0 auto;">
         <img class="responsiveimg"  
-        alt="Professional LG Dryer Repair Services"
+        alt="Professional Kenmore  Fridge Repair Services"
         src="images/.webp" width="600" height="600">
     </div>
     <div class="maintext">
@@ -23,7 +23,7 @@ import Layout from '../layouts/Layout.astro';
     </div>
     <div id="price-list"></div>
     <div class="maintext">
-        <h2>Common Issues with Kenmore Fridges: When to Call a Technician&nbsp;&nbsp;&nbsp;<a aria-label="Learn more about LG dryer repair" href="#topblock"><img
+        <h2>Common Issues with Kenmore Fridges: When to Call a Technician&nbsp;&nbsp;&nbsp;<a aria-label="Learn more about Kenmore  fridge repair repair" href="#topblock"><img
                 loading="lazy" alt="Go to main menu" src="images/back_to_top.png" width="80" height="79"></a></h2>
         <br>
         <p> Here are common problems to be aware of:</p>
@@ -66,15 +66,15 @@ import Layout from '../layouts/Layout.astro';
         </p>
         <p class="bt"><a aria-label="Book Us" href="book.html" class="button-85">&nbsp;&nbsp;BOOK US&nbsp;</a></p>
     </div>
-    <div id="lg-dryer-repair"></div>
+    <div id="repair"></div>
     <hr style="width:85%; margin:0 auto 0 auto;"><br>
     <div class="maintext">
-        <h2> Kenmore Fridges Repair Services &nbsp; &nbsp;<a aria-label="Learn more about LG dryer repair"
+        <h2> Kenmore Fridges Repair Services &nbsp; &nbsp;<a aria-label="Learn more about Kenmore  fridge repair"
                                                       href="#topblock"><img
-                loading="lazy" alt="LG appliance repair services - main menu" src="images/back_to_top.png" width="80"
+                loading="lazy" alt="Kenmore  fridge repair services - main menu" src="images/back_to_top.png" width="80"
                 height="79"></a></h2>
         <div style="max-width:500px; max-height:500px; margin:0 auto 0 auto; padding:20px;">
-            <img loading="lazy"  class="responsiveimg"  alt="Professional LG Dryer Repair Services"
+            <img loading="lazy"  class="responsiveimg"  alt="Professional Kenmore  fridge Repair Services"
             src="images/.webp" width="500"  height="500"></div>
             <p>Is your Kenmore refrigerator giving you trouble? Don't let a malfunctioning fridge disrupt your kitchen routine. Our expert technicians specialize in Kenmore fridge repair services, providing prompt and reliable solutions to get your appliance back to optimal performance.</p>
             <ul>
@@ -100,7 +100,7 @@ import Layout from '../layouts/Layout.astro';
             <h2>Our Repair Process:</h2>
             <ol>
                 <li>**Schedule an Appointment:** Contact us to schedule a convenient appointment for your Kenmore fridge repair.</li>
-                <li>**DiagnostLG dryer repairic Assessment:** Our technicians will perform a thorough diagnostic assessment to pinpoint the issue.</li>
+                <li>**Diagnost Kenmore  fridge repairic Assessment:** Our technicians will perform a thorough diagnostic assessment to pinpoint the issue.</li>
                 <li>**Quotation:** You'll receive a clear and detailed quotation for the repair costs, including parts and labor.</li>
                 <li>**Repairs:** Upon your approval, we'll proceed with the repairs using genuine Kenmore replacement parts.</li>
                 <li>**Testing:** After the repairs, we'll test the refrigerator to ensure it's functioning correctly.</li>
@@ -116,14 +116,14 @@ import Layout from '../layouts/Layout.astro';
             <p class="bt"><a aria-label="Book Us" href="book.html" class="button-85">&nbsp;&nbsp;BOOK US&nbsp;</a></p>
     </div>
     <hr style="width:85%; margin:0 auto 0 auto;"><br>
-    <div id="lg-dryer-instalation"></div>
+    <div id="maintenance"></div>
     <div class="maintext">
-        <h2>Kenmore Fridge Maintenance Services &nbsp; &nbsp;<a aria-label="Learn more about LG dryer installation"
+        <h2>Kenmore Fridge Maintenance Services &nbsp; &nbsp;<a aria-label="Learn more about Kenmore  fridge installation"
                                                            href="#topblock">
  <img loading="lazy" alt="Go to main menu"  src="images/back_to_top.png" width="80" 
  height="79"></a></h2>
         <div style="max-width:500px; max-height:500px; margin:0 auto 0 auto; padding:20px;">
-            <img loading="lazy"  class="responsiveimg"  alt="Professional LG Dryer Repair Services"
+            <img loading="lazy"  class="responsiveimg"  alt="Professional Kenmore  fridge Repair Services"
         src="images/.webp"  width="500"  height="500"></div>                                                                                
         <p>Preserve the longevity and efficiency of your Kenmore refrigerator with our comprehensive maintenance services. Regular maintenance is the key to preventing potential issues, ensuring optimal performance, and extending the life of your appliance. Trust our skilled technicians to provide expert care for your Kenmore fridge.</p>
 
