--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,10 +67,10 @@ const { title } = Astro.props;
                                 d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"></path>
                       </svg>
                   </span>
-            Price List
+            Main Issues
         </a>
 
-        <a style="--clr: #7808d0" class="button" href="/#lg-dryer-repair">
+        <a style="--clr: #7808d0" class="button" href="/#repair">
                   <span class="button__icon-wrapper">
                       <svg width="10" class="button__icon-svg" xmlns="http://www.w3.org/2000/svg" fill="none"
                            viewBox="0 0 14 15">
@@ -86,7 +86,7 @@ const { title } = Astro.props;
                   </span>
             Repair
         </a>
-        <a style="--clr: #7808d0" class="button" href="/#lg-dryer-instalation">
+        <a style="--clr: #7808d0" class="button" href="/#maintenance">
                   <span class="button__icon-wrapper">
                       <svg width="10" class="button__icon-svg" xmlns="http://www.w3.org/2000/svg" fill="none"
                            viewBox="0 0 14 15">
@@ -100,9 +100,9 @@ const { title } = Astro.props;
                                 d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"></path>
                       </svg>
                   </span>
-            Installation
+            Maintenance
         </a>
-        <a style="--clr: #7808d0" class="button" href="/#lg-dryer-cleaning">
+        <a style="--clr: #7808d0" class="button" href="/#areas">
                   <span class="button__icon-wrapper">
                       <svg width="10" class="button__icon-svg" xmlns="http://www.w3.org/2000/svg" fill="none"
                            viewBox="0 0 14 15">
@@ -116,7 +116,7 @@ const { title } = Astro.props;
                                 d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"></path>
                       </svg>
                   </span>
-            Cleaning
+            Service Areas
         </a>
     </div>
     <main>
@@ -172,8 +172,9 @@ const { title } = Astro.props;
     <slot />
     <footer class="region prose wrapper">
       <hr style="width:85%; margin:0 auto 0 auto;"><br>
+      <div id="areas"></div>
       <div class="maintext">
-      <h2>Areas We Serve &nbsp; &nbsp;<a aria-label="Learn more about LG dryer repair" href="#topblock"><img
+      <h2>Areas We Serve &nbsp; &nbsp;<a aria-label="Learn more about Kenmore  fridge repair" href="#topblock"><img
         loading="lazy"
         alt="Go to main menu"
         src="images/back_to_top.png"
