--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro';
     <div style="max-width:680px; max-height:680px; margin:0 auto 0 auto;">
         <img class="responsiveimg"  
         alt="Professional Kenmore  Fridge Repair Services"
-        src="images/.webp" width="600" height="600">
+        src="images/kenmore-fridge-repair-services.webp" width="600" height="600">
     </div>
     <div class="maintext">
         <ul>
