--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,15 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <meta name="theme-color" content="#9EA3FA" />
     <meta name="google-site-verification" content="zvBjHZKQmya7oClWyHqfMtZz7e4nzqkKvi6KfWXpJ7s" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DKHN1V7FKX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-DKHN1V7FKX');
+</script>
     <SEO />
 
     <title>{title}</title>
